# microbenchmarks

./: .gitignore  bandwidth.py  cuda_context.py  flamegraph.sh  import_dynamo.py  import_torch.py  memory.py  multiprocess.py  process.py  timer_cpp_vs_python.py  zip-llama.py
toy_model_project/: CMakeLists.txt  toy_model.cpp  toy_model.py
